Refactor tests to dynamically resolve and match versions. (#81)
Refactor the tests to dynamically resolve and match the latest version(s) for Micronaut Framework. This should allow
us to not have to update version numbers in the tests every time a new version of Micronaut Framework is released, 
while also still ensuring that we are always testing against the latest version.

---------

Co-authored-by: Tim te Beek <timtebeek@gmail.com>